fixed issues with width overflow in docs
centered doc content including docs tree nav

fixed <pre> overflow issues

improvements to mobile view

made sidebar always visible in desktop

--- a/frontend/src/styles/base.css
+++ b/frontend/src/styles/base.css
@@ -2,3 +2,9 @@ body {
   background-color: #fefefe;
   font-family: english-grotesque, sans-serif;
 }
+
+pre {
+  max-width: 100%;
+  overflow-x: auto;
+  background: #eee;
+}
